Add VMs telemetry monitoring
